fix weird spacing

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -170,7 +170,7 @@ div.compact {
     .card-content {
         text-align: left;
         padding: 10px;
-        height: 80px;
+        height: 90px;
         position: relative;
     }
 
